Update workflow with info from the correct Quip

--- a/.github/workflows/myworkflow.yml
+++ b/.github/workflows/myworkflow.yml
@@ -8,7 +8,16 @@ jobs:
       - run: echo "Running on a ${{ runner.os }} server hosted by GitHub."
       - run: echo "Repository is ${{ github.repository }}, branch is ${{ github.ref }}."
 
-      - name: Checkout repository
+      - name: Checkout the action from a private repository
+        uses: actions/checkout@v2
+        if: ${{ always() }}
+        with:
+          repository: vijejain/cicd-actions
+          ref: refs/heads/main
+          token: ${{ secrets.TOKEN }}   # Required for Private Beta
+          path: ./.github/vijejain/cicd-actions
+
+      - name: Checkout the repository with the code to be analyzed
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
@@ -21,7 +30,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
 
-      - name: Build the package using Maven
+      - name: Build the repository to be analzed (using Maven)
         run: |
           cd ${{ github.workspace }}
           mvn package
@@ -29,7 +38,7 @@ jobs:
       - run: echo "Job status after building is ${{ job.status }}."
 
       - name: Analyze with CodeGuru Reviewer
-        uses: aws-actions/codeguru-reviewer@v1
+        uses: ./.github/vijejain/cicd-actions
         if: ${{ always() }} 
         with:
           source_path: .     # Repository root
