--- a/.github/workflows/myworkflow.yml
+++ b/.github/workflows/myworkflow.yml
@@ -46,7 +46,7 @@ jobs:
         if: ${{ always() }} 
         with:
           source_path: .     # Repository root
-          build_root: target # build artifact(s) directory
+          build_path: target # build artifact(s) directory
           s3_bucket: codeguru-reviewer-github-nrosner-gurutest  # S3 Bucket with "codeguru-reviewer-*" prefix
 
       - run: echo "Job status after analyzing is ${{ job.status }}."
